--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,10 @@
         </testsuite>
     </testsuites>
 
+    <php>
+        <env name="XDEBUG_MODE" value="off"/>
+    </php>
+
     <coverage>
         <report>
           <html outputDirectory="coverage"/>
